Set max-width on text-links in source-code to avoid horizontal scroll
Bug: 336956775
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5501255
Auto-Submit: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -150,6 +150,12 @@ body {
   white-space: pre-wrap;
 }
 
+.source-code .devtools-link.text-button {
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 img {
   -webkit-user-drag: none;
 }
